Fix submit button issue on smaller screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,7 +40,7 @@ ul{
 
 .container {
   /* z-index: 1; */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* .border {
