--- a/client/src/styles/inputForm.css
+++ b/client/src/styles/inputForm.css
@@ -6,7 +6,7 @@
     align-items: center;
 }
 
-.div-inputForm::before{
+/* .div-inputForm::before{
     content:"";
     position: absolute;
     width: 100%;
@@ -22,7 +22,7 @@
     height: 100%;
     background: linear-gradient(#11ec2e, var(--button-text-green));
     clip-path: circle(45% at 0% 120%);
-}
+} */
 
 
 .inputFormTitle{
